--- a/apps/frontend-webapp/modules/importer/style.css
+++ b/apps/frontend-webapp/modules/importer/style.css
@@ -80,6 +80,11 @@ td {
     border-top: 1px solid var(--border-color);
     margin-top: var(--space-2);
     padding-top: var(--space-2);
+    display: block;
+    text-align: center;
+  }
+  .table-responsive td:last-child::before {
+    display: none;
   }
 }
 
